Stylesheet Fixes for v1.5
- Fixes scene cast when floating showing wrong border color around panel
- Color correction for Neutral theme scrollbar handles
- Removes minor code duplication
- Makes menu icons and indicators a little bit more symmetrically spaced out to the text and menu box
- Fixes sporadic bug seen in Linux with tree list branch icons, sometimes the default Qt icons show, sometimes they don't, setting a transparent image instead of empty URL seems to solve it
- Color correction to better differentiate child and mesh columns in darker themes
- Restore dark column color for FX

--- a/stuff/config/qss/Medium/less/layouts/mainwindow.less
+++ b/stuff/config/qss/Medium/less/layouts/mainwindow.less
@@ -167,7 +167,7 @@ QMenu {
   &::icon {
     border-radius: 2;
     position: absolute;
-    left: 5;
+    left: 7;
     padding: 0;
     margin: 0;
     qproperty-icon: url('@{img-url}/none');
@@ -183,13 +183,7 @@ QMenu {
     &:exclusive {
       &:extend(.RadioButton::indicator all);
     }
-    margin-left: 7;
-    &:non-exclusive {
-      &:extend(.CheckBox::indicator all);
-    }
-    &:exclusive {
-      &:extend(.RadioButton::indicator all);
-    }
+    margin-left: 8;
   }
 }
 
@@ -575,14 +569,17 @@ QTabBar {
   }
   
   &::branch {
+    /* A blank URL may not hide the Qt branch style in Linux, so we add
+       a transparent PNG which does. */
+    @blank_img: '@{img-url}/transparent_16x16.png';
+
     &:adjoins-item {
-      /* blank URL hides default Qt branch icons where it is not wanted */
-      border-image: url('');
+      border-image: url('@{blank_img}');
     }
     &:has-siblings {
-      border-image: url('');
+      border-image: url('@{blank_img}');
       &:adjoins-item {
-        border-image: url('');
+        border-image: url('@{blank_img}');
       }
     }
     &:has-children {
