--- a/stuff/config/qss/Medium/less/themes/Dark.less
+++ b/stuff/config/qss/Medium/less/themes/Dark.less
@@ -14,20 +14,21 @@
 @accent: darken(@bg, 12);
 @dock-bg-color: darken(@bg, 12);
 @tabbar-bg-color: darken(@bg, 4);
+@text-color: rgb(215, 215, 215);
 
 // -----------------------------------------------------------------------------
 // Menu
 // -----------------------------------------------------------------------------
 
 @menu-bg-color: darken(@bg, 4);
-@menu-border-color: lighten(@menu-bg-color, 15);
+@menu-border-color: lighten(@menu-bg-color, 10);
 
 // -----------------------------------------------------------------------------
 // File Browser / Trees
 // -----------------------------------------------------------------------------
 
 @tree-bg-color: darken(@bg, 4);
-@browser-itemview-bg-color: darken(@bg, 3);
+@browser-itemview-bg-color: darken(@bg, 0);
 @prefs-tree-bg-color: darken(@bg, 4);
 
 // -----------------------------------------------------------------------------
@@ -41,7 +42,7 @@
 // -----------------------------------------------------------------------------
 
 @input-bg-color: darken(@bg, 8);
-@input-border-color: lighten(@bg, 15);
+@input-border-color: lighten(@bg, 10);
 
 // -----------------------------------------------------------------------------
 // CheckBox
@@ -112,3 +113,10 @@
 // Function Spreadsheet Viewer
 @function-ColumnHeaderBorder-color: lighten(@bg, 10);
 @function-ColumnHeaderBG-color: darken(@bg, 4);
+
+// -----------------------------------------------------------------------------
+// Schematic Viewer
+// -----------------------------------------------------------------------------
+
+// Node Viewer
+@schematic-viewer-bg-color:  darken(@bg, 4);
