--- a/stuff/config/qss/Medium/less/themes/Light.less
+++ b/stuff/config/qss/Medium/less/themes/Light.less
@@ -44,10 +44,7 @@
 // -----------------------------------------------------------------------------
 
 // Container
-@scrollbar-bg-color:                darken(@bg, 5);
-@scrollbar-handle-bg-color:         darken(@bg, 28);
-@scrollbar-handle-bg-color-hover:   darken(@scrollbar-handle-bg-color, 10);
-@scrollbar-handle-bg-color-pressed: darken(@scrollbar-handle-bg-color-hover, 15);
+@scrollbar-handle-bg-color:         darken(@bg, 15);
 
 // -----------------------------------------------------------------------------
 // Titlebars
@@ -196,7 +193,7 @@
 @xsheet-NotEmptyColumn-color:               @xsheet-bg-color;
 @xsheet-SelectedEmptyCell-color:            fade(mix(lighten(@xsheet-EmptyCell-color, -20), @cellHighlightTintColor, 80), 50);
 
-@xsheet-LevelColumn-color:                  #9ed49e;
+@xsheet-LevelColumn-color:                  #a1cea1;
 @xsheet-VectorColumn-color:                 #d39ab5;
 @xsheet-ChildColumn-color:                  #cca3cc;
 @xsheet-FullColorColumn-color:              #b0cbdd;
