--- a/stuff/config/qss/Medium/less/themes/Neutral.less
+++ b/stuff/config/qss/Medium/less/themes/Neutral.less
@@ -51,8 +51,10 @@
 // Scrollbars
 // -----------------------------------------------------------------------------
 
-@scrollbar-bg-color: darken(@bg, 6);
-@scrollbar-handle-bg-color: lighten(@bg, 10);
+@scrollbar-bg-color: darken(@bg, 0);
+@scrollbar-handle-bg-color: darken(@bg, 12);
+@scrollbar-handle-bg-color-hover: darken(@scrollbar-handle-bg-color, 6);
+@scrollbar-handle-bg-color-pressed: darken(@scrollbar-handle-bg-color-hover, 6);
 
 // -----------------------------------------------------------------------------
 // Palette Window
